Fixed Overflow Issue

--- a/applications/Commodity/static/css/custom.css
+++ b/applications/Commodity/static/css/custom.css
@@ -2,6 +2,7 @@
 
 .hdbgcolor {
     background-color: #31343a;
+    overflow: hidden;
 }
 .textcolor {
     color: #dbdde0
